# viikkotehtavat

./: README.md
olioviikko4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
olioviikko5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikko3olio/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikko6olio/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikkoteht7olio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkoteht8olio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotehtava1/: CMakeLists.txt  main.cpp
viikkotehtava2/: CMakeLists.txt  game.cpp  game.h  main.cpp
